--- a/musicalChairs/musicalChairs/Base.lproj/Main.storyboard
+++ b/musicalChairs/musicalChairs/Base.lproj/Main.storyboard
@@ -18,57 +18,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mobile Lab Musical Chairs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXW-n6-snt">
-                                <rect key="frame" x="87" y="39" width="200" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile Lab Musical Chairs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXW-n6-snt">
+                                <rect key="frame" x="87.5" y="40" width="200" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="waiting for other players" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aG7-Ci-eqS">
-                                <rect key="frame" x="95" y="115" width="185" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12/16 players have joined" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a6D-j7-Hvm">
+                                <rect key="frame" x="92" y="621" width="191" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="12/16 players have joined" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a6D-j7-Hvm">
-                                <rect key="frame" x="92" y="589" width="191" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e8L-dP-X3S">
-                                <rect key="frame" x="67" y="173" width="241" height="320"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="320" id="Ln2-xU-WbB"/>
-                                    <constraint firstAttribute="width" constant="241" id="uy6-eR-r00"/>
-                                </constraints>
-                            </scrollView>
-                            <pageControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="i57-v8-CoH">
-                                <rect key="frame" x="168" y="443" width="39" height="37"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="37" id="3Mb-Ue-YqJ"/>
-                                    <constraint firstAttribute="width" constant="39" id="WF8-88-SvN"/>
-                                </constraints>
-                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="i57-v8-CoH" firstAttribute="top" secondItem="aG7-Ci-eqS" secondAttribute="bottom" constant="550" id="3Iy-M0-Opk"/>
-                            <constraint firstItem="i57-v8-CoH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="168" id="5MB-cH-Z0T"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="i57-v8-CoH" secondAttribute="trailing" constant="168" id="cN1-8Q-d2u"/>
-                            <constraint firstItem="i57-v8-CoH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fY4-ts-16g"/>
-                            <constraint firstItem="e8L-dP-X3S" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="swm-f4-0uR"/>
-                            <constraint firstItem="e8L-dP-X3S" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zbf-jj-Ehc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="a6D-j7-Hvm" secondAttribute="bottom" constant="25" id="5Rq-F4-5hj"/>
+                            <constraint firstItem="bXW-n6-snt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Iex-Xb-L9m"/>
+                            <constraint firstItem="a6D-j7-Hvm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lC5-5Q-WXr"/>
+                            <constraint firstItem="bXW-n6-snt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="p8Y-pG-12l"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="instructionsScrollView" destination="e8L-dP-X3S" id="Rdi-xA-abC"/>
-                        <outlet property="pageControl" destination="i57-v8-CoH" id="sS6-JU-alO"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
